[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "db_connector"
version = "0.1.0"
description = "A high-performance PostgreSQL connector for Python, written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
]
keywords = ["postgresql", "database", "rust", "async", "connector"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "db_connector._internal"
